--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       start_period: 30s
 
   mainapp:
-    image: trainwithshubham/bankapp:latest
+    build:
+      context: .
     container_name: Bankapp
     environment:
       - SPRING_DATASOURCE_USERNAME=root
